# MCSoccer

./: .gitignore  README.md
firmware/utils/get_mac_address/: get_mac_address.ino
mcu/mcsoccer_esp32/: mcsoccer_esp32.ino
simulation/mcsoccer_ws/src/soccer_bot/: package.xml  setup.cfg  setup.py
simulation/mcsoccer_ws/src/soccer_bot/launch/: display.launch.py  sim.launch.py
simulation/mcsoccer_ws/src/soccer_bot/urdf/: robot.urdf.xacro
simulation/src/mcsoccer/: CMakeLists.txt  README.md  package.xml
simulation/src/mcsoccer/config/: joystick.yaml  view_bot.rviz
simulation/src/mcsoccer/description/: README.md  mcsoccer.gazebo  mcsoccer.urdf.xacro
simulation/src/mcsoccer/launch/: joystick.launch.py  rsp.launch.py  sim.launch.py
